sjf5gf/src/pp2/y.output
Nonterminals useless in grammar

   NamedType
   NamedTypeList
   operator
   FieldList
   FieldItems
   SwitchStmt
   CaseStmt


Terminals unused in grammar

   T_Switch
   ':'


Rules useless in grammar

  101 NamedType: T_Identifier

  102 NamedTypeList: NamedTypeList NamedType
  103              | NamedType

  104 operator: T_LessEqual
  105         | T_GreaterEqual
  106         | T_Equal
  107         | T_NotEqual
  108         | T_And
  109         | T_Or
  110         | T_Dims

  111 Field: FieldList

  112 FieldList: FieldList FieldItems

  113 FieldItems: VarDecl
  114           | FnDecl

  115 Stmt: SwitchStmt

  116 SwitchStmt: T_Switch '(' T_Identifier ')' CaseStmt

  117 CaseStmt: CaseStmt ':' StmtList


State 96 conflicts: 2 shift/reduce
State 163 conflicts: 1 shift/reduce
State 193 conflicts: 14 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Bool
   12     | T_String
   13     | T_Double
   14     | T_Identifier
   15     | Type T_Dims

   16 Post: T_Increment
   17     | T_Decrement

   18 FnDecl: FnHeader StmtBlock

   19 FnHeader: Type T_Identifier '(' Formals ')'
   20         | T_Void T_Identifier '(' Formals ')'

   21 Formals: FormalList
   22        | /* empty */

   23 FormalList: FormalList ',' Variable
   24           | Variable

   25 ClassDecl: T_Class T_Identifier Extends Implements '{' Field '}'

   26 Extends: T_Extends T_Identifier
   27        | /* empty */

   28 Implements: ImplementsList
   29           | /* empty */

   30 ImplementsList: ImplementsList ',' T_Identifier
   31               | T_Implements T_Identifier

   32 Field: /* empty */

   33 InterfaceDecl: T_Interface T_Identifier '{' Prototype '}'

   34 Prototype: Type T_Identifier '(' Formals ')' ';'
   35          | T_Void T_Identifier '(' Formals ')' ';'

   36 StmtBlock: '{' VarDecls StmtList '}'

   37 VarDecls: VarDecls VarDecl
   38         | /* empty */

   39 StmtList: StmtList Stmt
   40         | Stmt

   41 Stmt: NewForStmt ';'
   42     | IfStmt
   43     | WhileStmt
   44     | ForStmt
   45     | BreakStmt
   46     | ReturnStmt
   47     | PrintStmt
   48     | StmtBlock
   49     | PostfixStmt

   50 IfStmt: T_If '(' Expr ')' Stmt ElseStmt

   51 ElseStmt: T_Else NewForStmt

   52 WhileStmt: T_While '(' Expr ')' Stmt

   53 ForStmt: T_For '(' NewForStmt ';' Expr ';' NewForStmt ')' Stmt

   54 NewForStmt: Expr
   55           | /* empty */

   56 BreakStmt: T_Break ';'

   57 ReturnStmt: T_Return NewForStmt ';'

   58 PrintStmt: T_Print '(' Expr NewPrintStmt ')' ';'

   59 NewPrintStmt: ',' Expr
   60             | /* empty */

   61 PostfixStmt: T_Identifier Post Stmt

   62 Expr: LValue '=' Expr
   63     | Constant
   64     | LValue
   65     | T_This
   66     | Call
   67     | '(' Expr ')'
   68     | T_Identifier '+' T_Identifier
   69     | T_Identifier '-' T_Identifier
   70     | T_Identifier '*' T_Identifier
   71     | T_Identifier '/' T_Identifier
   72     | T_Identifier '%' T_Identifier
   73     | '-' T_Identifier
   74     | T_Identifier '<' T_Identifier
   75     | T_Identifier T_LessEqual T_Identifier
   76     | T_Identifier '>' T_Identifier
   77     | T_Identifier T_GreaterEqual T_Identifier
   78     | T_Identifier T_Equal T_Identifier
   79     | T_Identifier T_NotEqual T_Identifier
   80     | T_Identifier T_And T_Identifier
   81     | T_Identifier T_Or T_Identifier
   82     | '!' T_Identifier
   83     | T_ReadInteger '(' ')'
   84     | T_ReadLine '(' ')'
   85     | T_New '(' T_Identifier ')'
   86     | T_NewArray '(' Expr ',' Type ')'

   87 LValue: T_Identifier
   88       | Expr '.' T_Identifier
   89       | Expr '[' Expr ']'

   90 Call: T_Identifier '(' Actuals ')'
   91     | Expr '.' T_Identifier '(' Actuals ')'

   92 Actuals: ActualList
   93        | /* empty */

   94 ActualList: ActualList ',' Expr
   95           | Expr

   96 Constant: T_IntConstant
   97         | T_DoubleConstant
   98         | T_BoolConstant
   99         | T_StringConstant
  100         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 82
'%' (37) 72
'(' (40) 19 20 34 35 50 52 53 58 67 83 84 85 86 90 91
')' (41) 19 20 34 35 50 52 53 58 67 83 84 85 86 90 91
'*' (42) 70
'+' (43) 68
',' (44) 23 30 59 86 94
'-' (45) 69 73
'.' (46) 88 91
'/' (47) 71
':' (58)
';' (59) 8 34 35 41 53 56 57 58
'<' (60) 74
'=' (61) 62
'>' (62) 76
'[' (91) 89
']' (93) 89
'{' (123) 25 33 36
'}' (125) 25 33 36
error (256)
T_Void (258) 20 35
T_Bool (259) 11
T_Int (260) 10
T_Double (261) 13
T_String (262) 12
T_Class (263) 25
T_LessEqual (264) 75
T_GreaterEqual (265) 77
T_Equal (266) 78
T_NotEqual (267) 79
T_Dims (268) 15
T_Increment (269) 16
T_Decrement (270) 17
T_And (271) 80
T_Or (272) 81
T_Null (273) 100
T_Extends (274) 26
T_This (275) 65
T_Interface (276) 33
T_Implements (277) 31
T_While (278) 52
T_For (279) 53
T_If (280) 50
T_Else (281) 51
T_Return (282) 57
T_Break (283) 56
T_Switch (284)
T_New (285) 85
T_NewArray (286) 86
T_Print (287) 58
T_ReadInteger (288) 83
T_ReadLine (289) 84
T_Identifier (290) 9 14 19 20 25 26 30 31 33 34 35 61 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 85 87 88 90 91
T_StringConstant (291) 99
T_IntConstant (292) 96
T_DoubleConstant (293) 97
T_BoolConstant (294) 98


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
Program (60)
    on left: 1, on right: 0
DeclList (61)
    on left: 2 3, on right: 1 2
Decl (62)
    on left: 4 5 6 7, on right: 2 3
VarDecl (63)
    on left: 8, on right: 4 37
Variable (64)
    on left: 9, on right: 8 23 24
Type (65)
    on left: 10 11 12 13 14 15, on right: 9 15 19 34 86
Post (66)
    on left: 16 17, on right: 61
FnDecl (67)
    on left: 18, on right: 5
FnHeader (68)
    on left: 19 20, on right: 18
Formals (69)
    on left: 21 22, on right: 19 20 34 35
FormalList (70)
    on left: 23 24, on right: 21 23
ClassDecl (71)
    on left: 25, on right: 6
Extends (72)
    on left: 26 27, on right: 25
Implements (73)
    on left: 28 29, on right: 25
ImplementsList (74)
    on left: 30 31, on right: 28 30
Field (75)
    on left: 32, on right: 25
InterfaceDecl (76)
    on left: 33, on right: 7
Prototype (77)
    on left: 34 35, on right: 33
StmtBlock (78)
    on left: 36, on right: 18 48
VarDecls (79)
    on left: 37 38, on right: 36 37
StmtList (80)
    on left: 39 40, on right: 36 39
Stmt (81)
    on left: 41 42 43 44 45 46 47 48 49, on right: 39 40 50 52 53 61
IfStmt (82)
    on left: 50, on right: 42
ElseStmt (83)
    on left: 51, on right: 50
WhileStmt (84)
    on left: 52, on right: 43
ForStmt (85)
    on left: 53, on right: 44
NewForStmt (86)
    on left: 54 55, on right: 41 51 53 57
BreakStmt (87)
    on left: 56, on right: 45
ReturnStmt (88)
    on left: 57, on right: 46
PrintStmt (89)
    on left: 58, on right: 47
NewPrintStmt (90)
    on left: 59 60, on right: 58
PostfixStmt (91)
    on left: 61, on right: 49
Expr (92)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85 86, on right: 50 52 53 54 58 59 62 67 86 88 89
    91 94 95
LValue (93)
    on left: 87 88 89, on right: 62 64
Call (94)
    on left: 90 91, on right: 66
Actuals (95)
    on left: 92 93, on right: 90 91
ActualList (96)
    on left: 94 95, on right: 92 94
Constant (97)
    on left: 96 97 98 99 100, on right: 63


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


state 1

   20 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


state 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


state 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


state 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


state 5

   12 Type: T_String .

    $default  reduce using rule 12 (Type)


state 6

   25 ClassDecl: T_Class . T_Identifier Extends Implements '{' Field '}'

    T_Identifier  shift, and go to state 20


state 7

   33 InterfaceDecl: T_Interface . T_Identifier '{' Prototype '}'

    T_Identifier  shift, and go to state 21


state 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


state 14

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims
   19 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


state 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 16

   18 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


state 17

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 18

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 19

   20 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


state 20

   25 ClassDecl: T_Class T_Identifier . Extends Implements '{' Field '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 27 (Extends)

    Extends  go to state 31


state 21

   33 InterfaceDecl: T_Interface T_Identifier . '{' Prototype '}'

    '{'  shift, and go to state 32


state 22

    0 $accept: Program $end .

    $default  accept


state 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


state 25

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


state 26

    9 Variable: Type T_Identifier .
   19 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 9 (Variable)


state 27

   36 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce using rule 38 (VarDecls)

    VarDecls  go to state 34


state 28

   18 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 18 (FnDecl)


state 29

   20 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 37
    FormalList  go to state 38


state 30

   26 Extends: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 39


state 31

   25 ClassDecl: T_Class T_Identifier Extends . Implements '{' Field '}'

    T_Implements  shift, and go to state 40

    $default  reduce using rule 29 (Implements)

    Implements      go to state 41
    ImplementsList  go to state 42


state 32

   33 InterfaceDecl: T_Interface T_Identifier '{' . Prototype '}'

    T_Void        shift, and go to state 43
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Type       go to state 44
    Prototype  go to state 45


state 33

   19 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 46
    FormalList  go to state 38


state 34

   36 StmtBlock: '{' VarDecls . StmtList '}'
   37 VarDecls: VarDecls . VarDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_While           shift, and go to state 49
    T_For             shift, and go to state 50
    T_If              shift, and go to state 51
    T_Return          shift, and go to state 52
    T_Break           shift, and go to state 53
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_Print           shift, and go to state 56
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 59
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '('               shift, and go to state 64
    '{'               shift, and go to state 27
    '-'               shift, and go to state 65
    '!'               shift, and go to state 66

    $default  reduce using rule 55 (NewForStmt)

    VarDecl      go to state 67
    Variable     go to state 13
    Type         go to state 36
    StmtBlock    go to state 68
    StmtList     go to state 69
    Stmt         go to state 70
    IfStmt       go to state 71
    WhileStmt    go to state 72
    ForStmt      go to state 73
    NewForStmt   go to state 74
    BreakStmt    go to state 75
    ReturnStmt   go to state 76
    PrintStmt    go to state 77
    PostfixStmt  go to state 78
    Expr         go to state 79
    LValue       go to state 80
    Call         go to state 81
    Constant     go to state 82


state 35

   24 FormalList: Variable .

    $default  reduce using rule 24 (FormalList)


state 36

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 83


state 37

   20 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 84


state 38

   21 Formals: FormalList .
   23 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 85

    $default  reduce using rule 21 (Formals)


state 39

   26 Extends: T_Extends T_Identifier .

    $default  reduce using rule 26 (Extends)


state 40

   31 ImplementsList: T_Implements . T_Identifier

    T_Identifier  shift, and go to state 86


state 41

   25 ClassDecl: T_Class T_Identifier Extends Implements . '{' Field '}'

    '{'  shift, and go to state 87


state 42

   28 Implements: ImplementsList .
   30 ImplementsList: ImplementsList . ',' T_Identifier

    ','  shift, and go to state 88

    $default  reduce using rule 28 (Implements)


state 43

   35 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 89


state 44

   15 Type: Type . T_Dims
   34 Prototype: Type . T_Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 90


state 45

   33 InterfaceDecl: T_Interface T_Identifier '{' Prototype . '}'

    '}'  shift, and go to state 91


state 46

   19 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 92


state 47

  100 Constant: T_Null .

    $default  reduce using rule 100 (Constant)


state 48

   65 Expr: T_This .

    $default  reduce using rule 65 (Expr)


state 49

   52 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 93


state 50

   53 ForStmt: T_For . '(' NewForStmt ';' Expr ';' NewForStmt ')' Stmt

    '('  shift, and go to state 94


state 51

   50 IfStmt: T_If . '(' Expr ')' Stmt ElseStmt

    '('  shift, and go to state 95


state 52

   57 ReturnStmt: T_Return . NewForStmt ';'

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '('               shift, and go to state 64
    '-'               shift, and go to state 65
    '!'               shift, and go to state 66

    $default  reduce using rule 55 (NewForStmt)

    NewForStmt  go to state 97
    Expr        go to state 79
    LValue      go to state 80
    Call        go to state 81
    Constant    go to state 82


state 53

   56 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 98


state 54
